k8s/infrastructure/controllers/envoy-gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: envoy-gateway-system
#  labels:
#    pod-security.kubernetes.io/enforce: privileged
