k8s/infrastructure/controllers/envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: reverse-proxy
  namespace: envoy-gateway-system
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
#    - name: https
#      protocol: HTTPS
#      port: 443
#      allowedRoutes:
#        kinds:
#          - kind: HTTPRoute
